--- a/mentions.html
+++ b/mentions.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <img src="Mr_Jenkins.jpg" width="100%" height="100%"
+    <img src="images/Mr_Jenkins.jpg" width="100%" height="100%"
     <div class="Titre">
       <p>Beretta Corporation</p>
     </div>
