--- a/apropos.html
+++ b/apropos.html
@@ -6,7 +6,37 @@
  <link rel="stylesheet" href="style.css">
  <script src="script.js"></script>
  </head>
+ <header>
+
 <body>
+<!-- Nav barre ----------------------- -->
+        <div class="nav">
+            <div class="boutons">
+                <a href="https://www.cyberpunk.net/us/fr/" target="_blank"><img src="images/logoIconeDetour.png" alt="Logo"></a> 
+            </div>
+            <div class="boutons">
+                <a href="index.html">Accueil</a>
+            </div>
+            <div class="boutons">
+                <a href="ville.html">Notre ville</a>
+            </div>
+            <div class="boutons">
+                <a href="programme.html">Notre programme</a>
+            </div>
+
+            <div class="boutons">
+                <a href="produits.html">Nos produits</a>
+            </div>
+            <div class="boutons">
+                <a href="contact.html">Contact</a>
+            </div>
+            <div class="boutons">
+                <a href="#about.html">About us</a>
+            </div>
+        </div>
+
+            <!-- Fin nav barre ------------------ -->
+
 <section id="P1">
 <h1>Qui sommes-nous ?</h1>
 <h2>Our Storie</h2>
@@ -15,6 +45,6 @@
 <h2>L’ambition du site</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin et dolor nec sapien dapibus viverra. Mauris mi sapien, condimentum sit amet augue ut, hendrerit semper ex. Vestibulum rhoncus ut purus mattis egestas. Phasellus sagittis metus a massa gravida rutrum. Nulla fringilla dolor ut cursus suscipit. Phasellus at risus et diam fringilla vulputate. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In accumsan interdum consequat. Vestibulum aliquet risus non porttitor lacinia. Donec ac ligula vestibulum, rutrum nunc ut, sodales dolor. Morbi eget felis vitae tellus tincidunt semper. Phasellus tempus dolor et purus lobortis ullamcorper. Donec pellentesque ullamcorper massa.</p>
 </section>
-
+</header>
 </body>
 </html>
