Modification des couleurs

--- a/apropos.html
+++ b/apropos.html
@@ -39,10 +39,14 @@
 
 <section id="P1">
 <h1>Qui sommes-nous ?</h1>
-<h2>Our Storie</h2>
+<h2>Notre histoire</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin et dolor nec sapien dapibus viverra. Mauris mi sapien, condimentum sit amet augue ut, hendrerit semper ex. Vestibulum rhoncus ut purus mattis egestas. Phasellus sagittis metus a massa gravida rutrum. Nulla fringilla dolor ut cursus suscipit. Phasellus at risus et diam fringilla vulputate. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In accumsan interdum consequat. Vestibulum aliquet risus non porttitor lacinia. Donec ac ligula vestibulum, rutrum nunc ut, sodales dolor. Morbi eget felis vitae tellus tincidunt semper. Phasellus tempus dolor et purus lobortis ullamcorper. Donec pellentesque ullamcorper massa.</p>
 <h1>Ligne éditoriale du site</h1>
 <h2>L’ambition du site</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin et dolor nec sapien dapibus viverra. Mauris mi sapien, condimentum sit amet augue ut, hendrerit semper ex. Vestibulum rhoncus ut purus mattis egestas. Phasellus sagittis metus a massa gravida rutrum. Nulla fringilla dolor ut cursus suscipit. Phasellus at risus et diam fringilla vulputate. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In accumsan interdum consequat. Vestibulum aliquet risus non porttitor lacinia. Donec ac ligula vestibulum, rutrum nunc ut, sodales dolor. Morbi eget felis vitae tellus tincidunt semper. Phasellus tempus dolor et purus lobortis ullamcorper. Donec pellentesque ullamcorper massa.</p>
+<h2>Sujets traités</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin et dolor nec sapien dapibus viverra. Mauris mi sapien, condimentum sit amet augue ut, hendrerit semper ex. Vestibulum rhoncus ut purus mattis egestas. Phasellus sagittis metus a massa gravida rutrum. Nulla fringilla dolor ut cursus suscipit. Phasellus at risus et diam fringilla vulputate. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In accumsan interdum consequat. Vestibulum aliquet risus non porttitor lacinia. Donec ac ligula vestibulum, rutrum nunc ut, sodales dolor. Morbi eget felis vitae tellus tincidunt semper. Phasellus tempus dolor et purus lobortis ullamcorper. Donec pellentesque ullamcorper massa.</p>
+<h2>Traitement de l’information</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin et dolor nec sapien dapibus viverra. Mauris mi sapien, condimentum sit amet augue ut, hendrerit semper ex. Vestibulum rhoncus ut purus mattis egestas. Phasellus sagittis metus a massa gravida rutrum. Nulla fringilla dolor ut cursus suscipit. Phasellus at risus et diam fringilla vulputate. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In accumsan interdum consequat. Vestibulum aliquet risus non porttitor lacinia. Donec ac ligula vestibulum, rutrum nunc ut, sodales dolor. Morbi eget felis vitae tellus tincidunt semper. Phasellus tempus dolor et purus lobortis ullamcorper. Donec pellentesque ullamcorper massa.</p>
 </section>
 </header>
