--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="boutons">
                 <a href="https://www.cyberpunk.net/us/fr/" target="_blank"><img src="images/logoIconeDetour.png" alt="Logo"></a> 
             </div>
-            <div class="boutons">
+            <div class="boutons" id="hote">
                 <a href="index.html">Accueil</a>
             </div>
             <div class="boutons">
@@ -25,7 +25,6 @@
             <div class="boutons">
                 <a href="programme.html">Notre programme</a>
             </div>
-
             <div class="boutons">
                 <a href="produits.html">Nos produits</a>
             </div>
@@ -45,6 +44,13 @@
             <div class="logo">
                 <img src="images/logoV2.png" alt="Logo">
             </div>
+            <p>
+                <span class="ensemble">Ensemble pour l'avenir</span>
+                <br>
+                <span class="ensemble">Ensemble pour Night City</span>
+                <br><br>
+                <span class="vote">Ton vote est une cartouche</span>
+            </p>
         </div>
 
             <!-- Fin image de fond -------------- -->
