page avec navbar

--- a/about.html
+++ b/about.html
@@ -3,18 +3,18 @@
 <head>
  <meta charset="utf-8">
  <title>Contact</title>
- <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="aboutstyle.css">
  <script src="script.js"></script>
  </head>
  <header>
 
 <body>
 <!-- Nav barre ----------------------- -->
-        <div class="nav">
+          <div class="nav">
             <div class="boutons">
                 <a href="https://www.cyberpunk.net/us/fr/" target="_blank"><img src="images/logoIconeDetour.png" alt="Logo"></a> 
             </div>
-            <div class="boutons">
+            <div class="boutons" id="hote">
                 <a href="index.html">Accueil</a>
             </div>
             <div class="boutons">
@@ -23,7 +23,6 @@
             <div class="boutons">
                 <a href="programme.html">Notre programme</a>
             </div>
-
             <div class="boutons">
                 <a href="produits.html">Nos produits</a>
             </div>
@@ -34,7 +33,6 @@
                 <a href="#about.html">About us</a>
             </div>
         </div>
-
             <!-- Fin nav barre ------------------ -->
 
 <section id="P1">
