--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
 
     <!-- ---------------------------- Fin en-tête --------------------------------- -->
 
+    <!-- ---------------------------- Footer --------------------------------- -->
+
+    <footer>
+        <p>
+            <span>Mentions légales</span><br><br>            
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vehicula est vitae tempor vehicula. Nunc porttitor elementum sapien, at sodales mauris finibus eu. Quisque mollis sit amet justo ac tempus. Morbi cursus tincidunt risus et eleifend. Fusce porta molestie tincidunt. Quisque sed pharetra mauris, ut convallis felis. Nunc sodales finibus.
+        </p>
+    </footer>
+
+    <!-- ---------------------------- Fin footer --------------------------------- -->
+
     
 </body>
 </html>
