--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
  <meta charset="utf-8">
- <title>Contact</title>
+ <title>About us</title>
  <link rel="stylesheet" href="aboutstyle.css">
  <script src="script.js"></script>
  </head>
@@ -48,5 +48,11 @@
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin et dolor nec sapien dapibus viverra. Mauris mi sapien, condimentum sit amet augue ut, hendrerit semper ex. Vestibulum rhoncus ut purus mattis egestas. Phasellus sagittis metus a massa gravida rutrum. Nulla fringilla dolor ut cursus suscipit. Phasellus at risus et diam fringilla vulputate. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In accumsan interdum consequat. Vestibulum aliquet risus non porttitor lacinia. Donec ac ligula vestibulum, rutrum nunc ut, sodales dolor. Morbi eget felis vitae tellus tincidunt semper. Phasellus tempus dolor et purus lobortis ullamcorper. Donec pellentesque ullamcorper massa.</p>
 </section>
 </header>
+<footer>
+        <p>
+            <span>Mentions légales</span><br><br>            
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vehicula est vitae tempor vehicula. Nunc porttitor elementum sapien, at sodales mauris finibus eu. Quisque mollis sit amet justo ac tempus. Morbi cursus tincidunt risus et eleifend. Fusce porta molestie tincidunt. Quisque sed pharetra mauris, ut convallis felis. Nunc sodales finibus.
+        </p>
+    </footer>
 </body>
 </html>
