--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Night City Mayor</title>
     <link rel="stylesheet" href="accueil.css">
+    <link rel="stylesheet" media="screen and (max-width: 1068px)" href="accueilSmall.css">
+    <link rel="stylesheet" media="screen and (max-width: 734px)" href="accueilMini.css">
 </head>
 <body>
     <!-- ----------------- En-tête ------------------------------------------ -->
