--- a/mention.html
+++ b/mention.html
@@ -3,12 +3,36 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>mentions légales</title>
+    <link href="mention.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <audio src="divine_fire.mp3">
-    </audio>
+           <!-- Nav barre ----------------------- -->
+           <div class="nav">
+            <div class="boutons">
+                <a href="https://www.cyberpunk.net/us/fr/" target="_blank"><img src="images/logoIconeDetour.png" alt="Logo"></a> 
+            </div>
+            <div class="boutons" id="hote">
+                <a href="index.html">Accueil</a>
+            </div>
+            <div class="boutons">
+                <a href="ville.html">Notre ville</a>
+            </div>
+            <div class="boutons">
+                <a href="programme.html">Notre programme</a>
+            </div>
+            <div class="boutons">
+                <a href="produits.html">Nos produits</a>
+            </div>
+            <div class="boutons">
+                <a href="contact.html">Contact</a>
+            </div>
+            <div class="boutons">
+                <a href="#about.html">About us</a>
+            </div>
+        </div>
+
+            <!-- Fin nav barre ------------------ -->
     <div class="background">
       <div class="titre">
         <p>Beretta Corporation</p>
@@ -59,5 +83,16 @@
         < crédits photo, icones, etc. ></p>
       </div>
     </div>
+
+        <!-- ---------------------------- Footer --------------------------------- -->
+
+        <footer>
+          <p>
+              <span>Mentions légales</span><br><br>            
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vehicula est vitae tempor vehicula. Nunc porttitor elementum sapien, at sodales mauris finibus eu. Quisque mollis sit amet justo ac tempus. Morbi cursus tincidunt risus et eleifend. Fusce porta molestie tincidunt. Quisque sed pharetra mauris, ut convallis felis. Nunc sodales finibus.
+          </p>
+      </footer>
+  
+      <!-- ---------------------------- Fin footer --------------------------------- -->
   </body>
 </html>
