--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Night City Mayor</title>
-    <link rel="stylesheet" href="accueil.css">
+    <link rel="stylesheet" media="screen and (min-width: 1069px)" href="accueil.css">
+    <link rel="stylesheet" media="screen and (max-width: 1068px)" href="accueilSmall.css">
+    <link rel="stylesheet" media="screen and (max-width: 734px)" href="accueilMini.css">
 </head>
 <body>
     <!-- ----------------- En-tête ------------------------------------------ -->
@@ -32,7 +34,7 @@
                 <a href="contact.html">Contact</a>
             </div>
             <div class="boutons">
-                <a href="about.html">About us</a>
+                <a href="#about.html">About us</a>
             </div>
         </div>
 
@@ -58,6 +60,17 @@
     </header>
 
     <!-- ---------------------------- Fin en-tête --------------------------------- -->
+
+    <!-- ---------------------------- Footer --------------------------------- -->
+
+    <footer>
+        <p>
+            <span>Mentions légales</span><br><br>            
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vehicula est vitae tempor vehicula. Nunc porttitor elementum sapien, at sodales mauris finibus eu. Quisque mollis sit amet justo ac tempus. Morbi cursus tincidunt risus et eleifend. Fusce porta molestie tincidunt. Quisque sed pharetra mauris, ut convallis felis. Nunc sodales finibus.
+        </p>
+    </footer>
+
+    <!-- ---------------------------- Fin footer --------------------------------- -->
 
     
 </body>
