--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             <div class="boutons">
                 <a href="https://www.cyberpunk.net/us/fr/" target="_blank"><img src="images/logoIconeDetour.png" alt="Logo"></a> 
             </div>
-            <div class="boutons" id="hote">
+            <div class="boutons">
                 <a href="index.html">Accueil</a>
             </div>
             <div class="boutons">
@@ -29,8 +29,8 @@
             <div class="boutons">
                 <a href="contact.html">Contact</a>
             </div>
-            <div class="boutons">
-                <a href="#about.html">About us</a>
+            <div class="boutons" id="hote">
+                <a href="about.html">About us</a>
             </div>
         </div>
             <!-- Fin nav barre ------------------ -->
